<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Woah!  WiFi Locator Bitches!</string>
    <string name="app_name">WifiLocator</string>
    <string name="bssid_label">Current BSSID:</string>
    <string name="zoneName_label">Zone Name:</string>
    <string name="poll_button_label">Poll</string>
    <string name="zone_label">Zone:</string>
    <string name="friend_button_label">Friends</string>
    <string name="get_friend_list">Get Friends List</string>
    <string name="pendingButton">Get Pending Requests</string>
    
    <string-array name="friends">
        <item>Andy</item>
        <item>Sara</item>
        <item>Ken</item>
        <item>Jennifer</item>
        <item>John</item>
        <item>Amanda</item>
        <item>Jack</item>
        <item>Tony</item>
        <item>Arnold</item>
        <item>Amy</item>
    </string-array>
    <string-array name="status">
        <item>On Campus</item>
        <item>Not on Campus</item>
        <item>Not on Campus</item>
        <item>On Campus</item>
        <item>Not on Campus</item>
        <item>Not on Campus</item>
        <item>Not on Campus</item>
        <item>Not on Campus</item>
        <item>On Campus</item>
        <item>Not on Campus</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="tweet">Tweet</string>
    <string name="ssid_label">SSID:</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_id">Friend ID</string>
    <string name="map_button_label">View Map</string>
    <string name="qr_scan">Scan QR</string>
    <string name="qr_code">Show QR Code</string>
    <string name="view_friend_requests">View Friend Requests</string>
    <string name="reject">Reject</string>
    <string name="confirm">Confirm</string>
    <string name="events">Events</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="organizer">Organizer:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="qr_code_hide">Hide QR Code</string>
    <string name="description_label">Description:</string>

</resources>
