<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/zoneNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoneName_label" />
                
        <TextView
            android:id="@+id/zoneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/eventsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events" android:layout_weight="1"/>

        <Button
            android:id="@+id/friendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_button_label" android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/mapbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_button_label" />

    <ImageView
        android:id="@+id/twitterIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/twitter_icon" />

</TableLayout>
